docs/tests/parser/control_flow/valid/ForEmptyInit.src
fn void test() {
    for (; i < 10; i++) {
    }
}
