docs/tests/parser/control_flow/invalid/ForMissingOpenBrace.src
fn void test() {
    for (;;)
        x++;
}
